# UltraClone

./: CMakeLists.txt  compile.bat
assets/lib/: glfw3.lib
include/glad/: glad.c
src/core/: main.cpp
src/render/: mesh.h  model.h
